k8s/namespaces/base/monkey/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monkey
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/warn: Privileged
